cloudformation/devops-network-cfn.yaml
AWSTemplateFormatVersion: '2010-09-09'

Description: >
    Cloudformation template for the AWS DevOps Mentorship
    three-tier networking architecture.

Parameters:

  ProjectName:
    Description: Name prefix for CloudFormation resources
    Type: String
    Default: cfn-devops

  VpcCIDR:
    Description: CIDR block for the CloudFormation VpcCIDR
    Type: String
    Default: 10.0.100.0/16

  PublicSubnetACIDR:
    Description: CIDR block for Public Subnet A
    Type: String
    Default: 10.0.101.0/24

  PublicSubnetBCIDR:
    Description: CIDR block for Public Subnet B
    Type: String
    Default: 10.0.102.0/24

  AppSubnetACIDR:
    Description: CIDR block for Private App Subnet A
    Type: String
    Default: 10.0.111.0/24

  AppSubnetBCIDR:
    Description: CIDR block for Private App Subnet B
    Type: String
    Default: 10.0.112.0/24

  DBSubnetACIDR:
    Description: CIDR block for Private DB Subnet A
    Type: String
    Default: 10.0.121.0/24

  DBSubnetBCIDR:
    Description: CIDR block for Private DB Subnet B
    Type: String
    Default: 10.0.122.0/24


  AvailabilityZoneA:
    Description: Availability Zone A
    Type: AWS::EC2::AvailabilityZone::Name
    Default: us-east-1a

  AvailabilityZoneB:
    Description: Availability Zone B
    Type: AWS::EC2::AvailabilityZone::Name
    Default: us-east-1b
    
  
  InstanceType:
    Description: EC2 instance type for application servers
    Type: String
    Default: t3.micro

  AmazonLinuxAMI:
    Description: Amazon Linux 2023 AMI ID
    Type: AWS::EC2::Image::Id

    

  
Resources:

  CfnVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-vpc'

  CfnPublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref CfnVPC
      CidrBlock: !Ref PublicSubnetACIDR
      AvailabilityZone: !Ref AvailabilityZoneA
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-public-a'

  CfnPublicSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref CfnVPC
      CidrBlock: !Ref PublicSubnetBCIDR
      AvailabilityZone: !Ref AvailabilityZoneB
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-public-b'

  CfnAppSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref CfnVPC
      CidrBlock: !Ref AppSubnetACIDR
      AvailabilityZone: !Ref AvailabilityZoneA
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-private-app-a'

  CfnAppSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref CfnVPC
      CidrBlock: !Ref AppSubnetBCIDR
      AvailabilityZone: !Ref AvailabilityZoneB
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-private-app-b'

  CfnDBSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref CfnVPC
      CidrBlock: !Ref DBSubnetACIDR
      AvailabilityZone: !Ref AvailabilityZoneA
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-private-db-a'

  CfnDBSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref CfnVPC
      CidrBlock: !Ref DBSubnetBCIDR
      AvailabilityZone: !Ref AvailabilityZoneB
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-private-db-b'

  CfnInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-igw'

  CfnVPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref CfnInternetGateway
      VpcId: !Ref CfnVPC

  CfnNatEIPA:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-nat-eip-a'

  CfnNatEIPB:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-nat-eip-b'

  CfnNatGatewayA:
    Type: AWS::EC2::NatGateway
    DependsOn: CfnVPCGatewayAttachment
    Properties:
      AllocationId: !GetAtt CfnNatEIPA.AllocationId
      SubnetId: !Ref CfnPublicSubnetA
      ConnectivityType: public
      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-nat-a'

  CfnNatGatewayB:
    Type: AWS::EC2::NatGateway
    DependsOn: CfnVPCGatewayAttachment
    Properties:
      AllocationId: !GetAtt CfnNatEIPB.AllocationId
      SubnetId: !Ref CfnPublicSubnetB
      ConnectivityType: public
      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-nat-b'
    
  CfnPublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref CfnVPC
      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-public-rt'

  CfnAppRouteTableA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref CfnVPC
      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-private-app-rt-a'

  CfnAppRouteTableB:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref CfnVPC
      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-private-app-rt-b'

  CfnDBRouteTableA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref CfnVPC
      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-private-db-rt-a'

  CfnDBRouteTableB:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref CfnVPC
      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-private-db-rt-b'
  
  CfnPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: CfnVPCGatewayAttachment
    Properties:
      RouteTableId: !Ref CfnPublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref CfnInternetGateway
      
  CfnPublicSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref CfnPublicSubnetA
      RouteTableId: !Ref CfnPublicRouteTable

  CfnPublicSubnetBRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref CfnPublicSubnetB
      RouteTableId: !Ref CfnPublicRouteTable

  CfnAppRouteA:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref CfnAppRouteTableA
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref CfnNatGatewayA
  
  CfnAppSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref CfnAppSubnetA
      RouteTableId: !Ref CfnAppRouteTableA
  
  CfnAppRouteB:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref CfnAppRouteTableB
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref CfnNatGatewayB

  CfnAppSubnetBRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref CfnAppSubnetB
      RouteTableId: !Ref CfnAppRouteTableB

  CfnDBSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref CfnDBSubnetA
      RouteTableId: !Ref CfnDBRouteTableA

  CfnDBSubnetBRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref CfnDBSubnetB
      RouteTableId: !Ref CfnDBRouteTableB

    # ============================================================
  # SECURITY GROUPS
  # ============================================================

  # ------------------------------------------------------------
  # ALB Security Group
  # ------------------------------------------------------------

  CfnALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${ProjectName}-alb-sg'
      GroupDescription: Security group for the internet-facing ALB
      VpcId: !Ref CfnVPC

      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-alb-sg'


  # ------------------------------------------------------------
  # Application Security Group
  # ------------------------------------------------------------

  CfnAppSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${ProjectName}-app-sg'
      GroupDescription: Security group for private application servers
      VpcId: !Ref CfnVPC

      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-app-sg'


  # ------------------------------------------------------------
  # Database Security Group
  # ------------------------------------------------------------

  CfnDBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${ProjectName}-db-sg'
      GroupDescription: Security group for private database resources
      VpcId: !Ref CfnVPC

      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-db-sg'


  # ============================================================
  # ALB SECURITY GROUP RULES
  # ============================================================

  # Internet -> ALB : HTTP 80

  CfnALBIngressHTTP:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref CfnALBSecurityGroup
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
      CidrIp: 0.0.0.0/0
      Description: Allow HTTP from the Internet


  # ALB -> Application Servers : HTTP 80

  CfnALBEgressToApp:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref CfnALBSecurityGroup
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
      DestinationSecurityGroupId: !Ref CfnAppSecurityGroup
      Description: Allow HTTP to application servers


  # ============================================================
  # APPLICATION SECURITY GROUP RULES
  # ============================================================

  # ALB -> Application Servers : HTTP 80

  CfnAppIngressFromALB:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref CfnAppSecurityGroup
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
      SourceSecurityGroupId: !Ref CfnALBSecurityGroup
      Description: Allow HTTP from ALB


  # Application Servers -> Internet/NAT : All outbound

  CfnAppEgressAll:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref CfnAppSecurityGroup
      IpProtocol: -1
      CidrIp: 0.0.0.0/0
      Description: Allow outbound traffic


  # ============================================================
  # DATABASE SECURITY GROUP RULES
  # ============================================================

  # Application Servers -> Database : PostgreSQL 5432

  CfnDBIngressFromApp:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref CfnDBSecurityGroup
      IpProtocol: tcp
      FromPort: 5432
      ToPort: 5432
      SourceSecurityGroupId: !Ref CfnAppSecurityGroup
      Description: Allow PostgreSQL from application servers


  # Database -> Outbound

  CfnDBEgressAll:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref CfnDBSecurityGroup
      IpProtocol: -1
      CidrIp: 0.0.0.0/0
      Description: Allow outbound traffic
    
  
  
  # ============================================================
  # Same rule design as the manually-created VPC,
  # translated to the CloudFormation CIDRs.
  # ============================================================
  # ============================================================
  # NETWORK ACLs
  # ============================================================

  # ------------------------------------------------------------
  # PUBLIC NACL
  # ------------------------------------------------------------

  CfnPublicNACL:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref CfnVPC
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-public-nacl"

  # Inbound
  CfnPublicNACLInboundHTTP:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnPublicNACL
      RuleNumber: 100
      Protocol: 6
      RuleAction: allow
      Egress: false
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 80
        To: 80

  CfnPublicNACLInboundHTTPS:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnPublicNACL
      RuleNumber: 110
      Protocol: 6
      RuleAction: allow
      Egress: false
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 443
        To: 443

  CfnPublicNACLInboundEphemeralInternet:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnPublicNACL
      RuleNumber: 120
      Protocol: 6
      RuleAction: allow
      Egress: false
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 1024
        To: 65535

  CfnPublicNACLInboundEphemeralAppA:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnPublicNACL
      RuleNumber: 130
      Protocol: 6
      RuleAction: allow
      Egress: false
      CidrBlock: 10.0.111.0/24
      PortRange:
        From: 1024
        To: 65535

  CfnPublicNACLInboundEphemeralAppB:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnPublicNACL
      RuleNumber: 140
      Protocol: 6
      RuleAction: allow
      Egress: false
      CidrBlock: 10.0.112.0/24
      PortRange:
        From: 1024
        To: 65535

  # Outbound
  CfnPublicNACLOutboundHTTPToAppA:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnPublicNACL
      RuleNumber: 100
      Protocol: 6
      RuleAction: allow
      Egress: true
      CidrBlock: 10.0.111.0/24
      PortRange:
        From: 80
        To: 80

  CfnPublicNACLOutboundHTTPToAppB:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnPublicNACL
      RuleNumber: 110
      Protocol: 6
      RuleAction: allow
      Egress: true
      CidrBlock: 10.0.112.0/24
      PortRange:
        From: 80
        To: 80

  CfnPublicNACLOutboundHTTPS:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnPublicNACL
      RuleNumber: 120
      Protocol: 6
      RuleAction: allow
      Egress: true
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 443
        To: 443

  CfnPublicNACLOutboundHTTP:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnPublicNACL
      RuleNumber: 130
      Protocol: 6
      RuleAction: allow
      Egress: true
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 80
        To: 80

  CfnPublicNACLOutboundEphemeral:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnPublicNACL
      RuleNumber: 140
      Protocol: 6
      RuleAction: allow
      Egress: true
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 1024
        To: 65535


  # ------------------------------------------------------------
  # APP NACL
  # ------------------------------------------------------------

  CfnAppNACL:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref CfnVPC
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-app-nacl"

  # Inbound
  CfnAppNACLInboundHTTPFromPublicA:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnAppNACL
      RuleNumber: 100
      Protocol: 6
      RuleAction: allow
      Egress: false
      CidrBlock: 10.0.101.0/24
      PortRange:
        From: 80
        To: 80

  CfnAppNACLInboundHTTPFromPublicB:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnAppNACL
      RuleNumber: 110
      Protocol: 6
      RuleAction: allow
      Egress: false
      CidrBlock: 10.0.102.0/24
      PortRange:
        From: 80
        To: 80

  CfnAppNACLInboundEphemeralFromPublicA:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnAppNACL
      RuleNumber: 120
      Protocol: 6
      RuleAction: allow
      Egress: false
      CidrBlock: 10.0.101.0/24
      PortRange:
        From: 1024
        To: 65535

  CfnAppNACLInboundEphemeralFromPublicB:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnAppNACL
      RuleNumber: 130
      Protocol: 6
      RuleAction: allow
      Egress: false
      CidrBlock: 10.0.102.0/24
      PortRange:
        From: 1024
        To: 65535

  CfnAppNACLInboundEphemeralFromDBA:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnAppNACL
      RuleNumber: 140
      Protocol: 6
      RuleAction: allow
      Egress: false
      CidrBlock: 10.0.121.0/24
      PortRange:
        From: 1024
        To: 65535

  CfnAppNACLInboundEphemeralFromDBB:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnAppNACL
      RuleNumber: 150
      Protocol: 6
      RuleAction: allow
      Egress: false
      CidrBlock: 10.0.122.0/24
      PortRange:
        From: 1024
        To: 65535

  CfnAppNACLInboundDNSUDP:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnAppNACL
      RuleNumber: 160
      Protocol: 17
      RuleAction: allow
      Egress: false
      CidrBlock: 10.0.100.0/16
      PortRange:
        From: 53
        To: 53

  CfnAppNACLInboundDNSTCP:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnAppNACL
      RuleNumber: 170
      Protocol: 6
      RuleAction: allow
      Egress: false
      CidrBlock: 10.0.100.0/16
      PortRange:
        From: 53
        To: 53

  CfnAppNACLInboundEphemeralAny:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnAppNACL
      RuleNumber: 180
      Protocol: 6
      RuleAction: allow
      Egress: false
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 1024
        To: 65535

  # Outbound
  CfnAppNACLOutboundEphemeralToPublicA:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnAppNACL
      RuleNumber: 100
      Protocol: 6
      RuleAction: allow
      Egress: true
      CidrBlock: 10.0.101.0/24
      PortRange:
        From: 1024
        To: 65535

  CfnAppNACLOutboundEphemeralToPublicB:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnAppNACL
      RuleNumber: 110
      Protocol: 6
      RuleAction: allow
      Egress: true
      CidrBlock: 10.0.102.0/24
      PortRange:
        From: 1024
        To: 65535

  CfnAppNACLOutboundPostgresToDBA:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnAppNACL
      RuleNumber: 120
      Protocol: 6
      RuleAction: allow
      Egress: true
      CidrBlock: 10.0.121.0/24
      PortRange:
        From: 5432
        To: 5432

  CfnAppNACLOutboundPostgresToDBB:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnAppNACL
      RuleNumber: 130
      Protocol: 6
      RuleAction: allow
      Egress: true
      CidrBlock: 10.0.122.0/24
      PortRange:
        From: 5432
        To: 5432

  CfnAppNACLOutboundHTTPS:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnAppNACL
      RuleNumber: 140
      Protocol: 6
      RuleAction: allow
      Egress: true
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 443
        To: 443

  CfnAppNACLOutboundHTTP:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnAppNACL
      RuleNumber: 150
      Protocol: 6
      RuleAction: allow
      Egress: true
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 80
        To: 80

  CfnAppNACLOutboundDNSUDP:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnAppNACL
      RuleNumber: 160
      Protocol: 17
      RuleAction: allow
      Egress: true
      CidrBlock: 10.0.100.2/32
      PortRange:
        From: 53
        To: 53

  CfnAppNACLOutboundDNSTCP:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnAppNACL
      RuleNumber: 170
      Protocol: 6
      RuleAction: allow
      Egress: true
      CidrBlock: 10.0.100.2/32
      PortRange:
        From: 53
        To: 53

  CfnAppNACLOutboundNTP:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnAppNACL
      RuleNumber: 180
      Protocol: 17
      RuleAction: allow
      Egress: true
      CidrBlock: 10.0.100.2/32
      PortRange:
        From: 123
        To: 123


  # ------------------------------------------------------------
  # DATABASE NACL
  # ------------------------------------------------------------

  CfnDBNACL:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref CfnVPC
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-db-nacl"

  # Inbound
  CfnDBNACLInboundPostgresFromAppA:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnDBNACL
      RuleNumber: 100
      Protocol: 6
      RuleAction: allow
      Egress: false
      CidrBlock: 10.0.111.0/24
      PortRange:
        From: 5432
        To: 5432

  CfnDBNACLInboundPostgresFromAppB:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnDBNACL
      RuleNumber: 110
      Protocol: 6
      RuleAction: allow
      Egress: false
      CidrBlock: 10.0.112.0/24
      PortRange:
        From: 5432
        To: 5432

  CfnDBNACLInboundEphemeralFromAppA:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnDBNACL
      RuleNumber: 120
      Protocol: 6
      RuleAction: allow
      Egress: false
      CidrBlock: 10.0.111.0/24
      PortRange:
        From: 1024
        To: 65535

  CfnDBNACLInboundEphemeralFromAppB:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnDBNACL
      RuleNumber: 130
      Protocol: 6
      RuleAction: allow
      Egress: false
      CidrBlock: 10.0.112.0/24
      PortRange:
        From: 1024
        To: 65535

  # Outbound
  CfnDBNACLOutboundEphemeralToAppA:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnDBNACL
      RuleNumber: 100
      Protocol: 6
      RuleAction: allow
      Egress: true
      CidrBlock: 10.0.111.0/24
      PortRange:
        From: 1024
        To: 65535

  CfnDBNACLOutboundEphemeralToAppB:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref CfnDBNACL
      RuleNumber: 110
      Protocol: 6
      RuleAction: allow
      Egress: true
      CidrBlock: 10.0.112.0/24
      PortRange:
        From: 1024
        To: 65535
  # ============================================================
  # NACL ASSOCIATIONS
  # ============================================================

  CfnPublicSubnetANACLAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref CfnPublicSubnetA
      NetworkAclId: !Ref CfnPublicNACL

  CfnPublicSubnetBNACLAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref CfnPublicSubnetB
      NetworkAclId: !Ref CfnPublicNACL

  CfnAppSubnetANACLAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref CfnAppSubnetA
      NetworkAclId: !Ref CfnAppNACL

  CfnAppSubnetBNACLAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref CfnAppSubnetB
      NetworkAclId: !Ref CfnAppNACL

  CfnDBSubnetANACLAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref CfnDBSubnetA
      NetworkAclId: !Ref CfnDBNACL

  CfnDBSubnetBNACLAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref CfnDBSubnetB
      NetworkAclId: !Ref CfnDBNACL
  
  #IAM role for ec2 instance to communicate with ssm

  CfnEC2SSMRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Sub '${ProjectName}-ec2-ssm-role'
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole

      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore

      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-ec2-ssm-role'

  # InstanceProfile

  CfnEC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      InstanceProfileName: !Sub '${ProjectName}-ec2-instance-profile'
      Roles:
        - !Ref CfnEC2SSMRole

  # Create EC2-A

  CfnEC2A:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      ImageId: !Ref AmazonLinuxAMI

      SubnetId: !Ref CfnAppSubnetA

      SecurityGroupIds:
        - !Ref CfnAppSecurityGroup

      IamInstanceProfile: !Ref CfnEC2InstanceProfile

      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-ec2-a'

      UserData:
        Fn::Base64: |
          #!/bin/bash

          dnf update -y
          dnf install -y nginx

          systemctl enable nginx
          systemctl start nginx

          cat > /usr/share/nginx/html/index.html <<'EOF'
          <!DOCTYPE html>
          <html>
          <head>
              <title>CloudFormation EC2-A</title>
          </head>
          <body>
              <h1>CloudFormation EC2-A</h1>
              <p>Nginx is running on Application Server A.</p>
          </body>
          </html>
          EOF
       
  #Create EC2-B

  CfnEC2B:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      ImageId: !Ref AmazonLinuxAMI

      SubnetId: !Ref CfnAppSubnetB

      SecurityGroupIds:
        - !Ref CfnAppSecurityGroup

      IamInstanceProfile: !Ref CfnEC2InstanceProfile

      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-ec2-b'

      UserData:
        Fn::Base64: |
          #!/bin/bash

          dnf update -y
          dnf install -y nginx

          systemctl enable nginx
          systemctl start nginx

          cat > /usr/share/nginx/html/index.html <<'EOF'
          <!DOCTYPE html>
          <html>
          <head>
              <title>CloudFormation EC2-B</title>
          </head>
          <body>
              <h1>CloudFormation EC2-B</h1>
              <p>Nginx is running on Application Server B.</p>
          </body>
          </html>
          EOF
  
  # create target group

  CfnAppTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Sub '${ProjectName}-app-tg'
      VpcId: !Ref CfnVPC
      Protocol: HTTP
      Port: 80
      TargetType: instance

      HealthCheckEnabled: true
      HealthCheckProtocol: HTTP
      HealthCheckPort: '80'
      HealthCheckPath: /
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 3
      HealthCheckIntervalSeconds: 30
      HealthCheckTimeoutSeconds: 5

      Targets:
        - Id: !Ref CfnEC2A
          Port: 80
        - Id: !Ref CfnEC2B
          Port: 80

      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-app-tg'

# create application load balancer
  CfnApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub '${ProjectName}-alb'
      Scheme: internet-facing
      Type: application
      IpAddressType: ipv4

      Subnets:
        - !Ref CfnPublicSubnetA
        - !Ref CfnPublicSubnetB

      SecurityGroups:
        - !Ref CfnALBSecurityGroup

      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-alb'

# create alb listener
  CfnALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref CfnApplicationLoadBalancer
      Port: 80
      Protocol: HTTP

      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref CfnAppTargetGroup
  

Outputs:

  VPCId:
    Description: ID of the CloudFormation VPC
    Value: !Ref CfnVPC

  PublicSubnetAId:
    Description: ID of Public Subnet A
    Value: !Ref CfnPublicSubnetA

  PublicSubnetBId:
    Description: ID of Public Subnet B
    Value: !Ref CfnPublicSubnetB

  AppSubnetAId:
    Description: ID of Private App Subnet A
    Value: !Ref CfnAppSubnetA

  AppSubnetBId:
    Description: ID of Private App Subnet B
    Value: !Ref CfnAppSubnetB

  DBSubnetAId:
    Description: ID of Private DB Subnet A
    Value: !Ref CfnDBSubnetA

  DBSubnetBId:
    Description: ID of Private DB Subnet B
    Value: !Ref CfnDBSubnetB

  InternetGatewayId:
    Description: ID of the Internet Gateway
    Value: !Ref CfnInternetGateway

  NatGatewayAId:
    Description: ID of NAT Gateway A
    Value: !Ref CfnNatGatewayA

  NatGatewayBId:
    Description: ID of NAT Gateway B
    Value: !Ref CfnNatGatewayB

  EC2AId:
    Description: ID of Application EC2 A
    Value: !Ref CfnEC2A

  EC2BId:
    Description: ID of Application EC2 B
    Value: !Ref CfnEC2B

  TargetGroupArn:
    Description: ARN of the application target group
    Value: !Ref CfnAppTargetGroup

  ALBDNSName:
    Description: DNS name of the Application Load Balancer
    Value: !GetAtt CfnApplicationLoadBalancer.DNSName
